--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Character Generator</title>
-        <script type="module" src="insert.js"></script>
-    </head>
-    <body>
-        <h1>Your Character:</h1>
-        <p>Loading</p>
-        <footer>Built From: <a href="https://github.com/bombasticSlacks/Character-Generator">https://github.com/bombasticSlacks/Character-Generator</a></footer>
-    </body>
+<html lang="en">
+<link rel="stylesheet" href="./styles.css" />
+
+<head>
+    <title>Monster Randomizer</title>
+
+</head>
+
+<body>
+    <div id="title">
+        <h1>Your Challenge:</h1>
+        <form>
+            <fieldset>
+                <legend> Select your tier </legend>
+                <div>
+                    <input title="Survivors Just Starting Out" type="radio" id="0" name="tier" value="0" checked />
+                    <label for="0">0</label>
+                </div>
+                <div>
+                    <input title="Fighting Basic Monsters With Some Equipment" type="radio" id="1" name="tier"
+                        value="1" />
+                    <label for="0">1</label>
+                </div>
+                <div>
+                    <input title="Survivors with heat" type="radio" id="2" name="tier" value="2" />
+                    <label for="0">2</label>
+                </div>
+                <div>
+                    <input title="Fighting Anything" type="radio" id="3" name="tier" value="3" />
+                    <label for="0">3</label>
+                </div>
+                <div>
+                    <button type="generate">Generate</button>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+    <div id="details">
+        <div id="monster" class="info">
+            <h2>Monster</h2>
+            <p id="monsterDetails"></p>
+        </div>
+        <div id="characters" class="info">
+            <h2>Survivors</h2>
+            <p id="survivorDetails"></p>
+        </div>
+        <div id="gear" class="info">
+            <h2>Gear</h2>
+            <p id="gearDetails"></p>
+        </div>
+        <div id="settlement" class="info">
+            <h2>Settlement</h2>
+            <p id="settlementDetails"></p>
+        </div>
+    </div>
+    <footer>
+        Built From: <a href="https://github.com/bombasticSlacks/KDMR">https://github.com/bombasticSlacks/KDMR</a>
+        <script type="module" src="webscript.js"></script>
+
+    </footer>
+</body>
+
 </html>
