--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="./styles.css" />
-<script type="module" src="webscript.js"></script>
+<script type="module" src="./webscript.js"></script>
 
 <head>
     <title>Monster Randomizer</title>
