--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
 
 <head>
     <title>Monster Randomizer</title>
-
 </head>
 
 <body>
     <div id="title">
-        <h1>Monster Randomizer:</h1>
+        <h1>Wanderers:</h1>
         <p> 4 survivors sit around a fire in the plain of faces, they either hunt or are hunted. </p>
     </div>
     <div id="details">
@@ -99,14 +98,15 @@
                 <li>1: You gain -1 strength</li>
                 <li>2-4: Draw 2 fighting arts, you gain 1</li>
                 <li>5-7: You gain +1 accuracy</li>
-                <li>8-10: You may copy any fighting art or secret fighting art another survivor has</li>
+                <li>8-9: You may copy any fighting art or secret fighting art another survivor has</li>
+                <li>10: Gain an additional weapon specialization, or upgrade a specialization into a mastery</li>
             </ul>
         </div>
         <div class="info">
             <h3>You Craft ✪</h3>
             <p>Choose One:</p>
             <ul>
-                <li>Obtain a copy of a paired weapon</li>
+                <li>Obtain a copy of a paired weapon already in camp</li>
                 <li>Sacrifice a weapon to obtain another weapon of tier of a certain type</li>
                 <li>Sacrifice an armor set, obtain another random armour set of tier</li>
             </ul>
