--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
                 </div>
                 <div>
                     <input title="Anything goes" type="radio" id="3" name="tier" value="3" />
-                    <label for="3">Veterans with an assortment of grand gear</label>
+                    <label for="3">Veterans with an assortment of gear</label>
                 </div>
                 <div>
-                    <button type="generate">Generate</button>
+                    <button type="generate">Inspect</button>
                 </div>
             </fieldset>
         </form>
@@ -45,7 +45,7 @@
             <p id="gearDetails"></p>
         </div>
         <div id="monster" class="info">
-            <h2>They Hunt</h2>
+            <h2 id="huntOr">They Hunt</h2>
             <p id="monsterDetails"></p>
         </div>
         <div id="characters" class="info">
