--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="monster" class="info">
             <h2 id="huntOr">They Hunt</h2>
-            <p id="monsterDetails"></p>
+            <h3 id="monsterDetails"></h3>
         </div>
         <div id="characters" class="info">
             <h2>They Are</h2>
@@ -61,6 +61,7 @@
     <h1>You Each May Endeavor Before Departing: ✪✪✪✪</h1>
     <div id="endeavors">
         <div class="info">
+            <p class="flavour">A shrine rests slightly away from the fire</p>
             <h3>You Pray ✪</h3>
             <p>Roll 1d10</p>
             <ul>
@@ -72,6 +73,7 @@
             </ul>
         </div>
         <div class="info">
+            <p class="flavour">Chimes jingle as the weather shifts</p>
             <h3>You Dance ✪</h3>
             <p>Roll 1d10</p>
             <ul>
@@ -82,6 +84,7 @@
             </ul>
         </div>
         <div class="info">
+            <p class="flavour">Sturdy packs rest gathered together</p>
             <h3>You Prepare Your Gear ✪</h3>
             <p>Roll 1d10</p>
             <ul>
@@ -92,6 +95,7 @@
             </ul>
         </div>
         <div class="info">
+            <p class="flavour">Faces worn with footwork mark a place of battle</p>
             <h3>You Train ✪</h3>
             <p>Roll 1d10</p>
             <ul>
@@ -103,12 +107,29 @@
             </ul>
         </div>
         <div class="info">
+            <p class="flavour">A bench and tools sit idly waiting for hands</p>
             <h3>You Craft ✪</h3>
             <p>Choose One:</p>
             <ul>
                 <li>Obtain a copy of a paired weapon already in camp</li>
                 <li>Sacrifice a weapon to obtain another weapon of tier of a certain type</li>
                 <li>Sacrifice an armor set, obtain another random armour set of tier</li>
+            </ul>
+        </div>
+        <div class="info">
+            <p class="flavour">A cracked face oozes black saccharine ichor</p>
+            <h3>You Imbibe ✪</h3>
+            <p>Roll 1d10</p>
+            <ul>
+                <li>1: Gain Possessed ability</li>
+                <li>2: Gain Bitter Frenzy ability</li>
+                <li>3: Gain Acid Palms ability</li>
+                <li>4: Gain Peerless ability</li>
+                <li>5: Gain Leyline Walker ability</li>
+                <li>6: Gain Nightmare Spurs ability</li>
+                <li>7: Gain Iron Will ability</li>
+                <li>8: Gain "Your complete affinities and incomplete affinity halves count as all colours." ability</li>
+                <li>9-10: Choose your outcome</li>
             </ul>
         </div>
     </div>
