more website stuff

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="./styles.css" />
+<link rel="icon" href="./favicon.svg" type="image/svg+xml">
 <script type="module" src="./webscript.js"></script>
 
 <head>
     <title>Monster Randomizer</title>
+    <meta name="author" content="bombasticSlacks" />
+    <meta name="description"
+        content="Nomads, a digital expansion for Kingdom Death: Monster that randomizes a single fight with random survivors." />
 </head>
 
 <body>
@@ -23,7 +27,7 @@
         <p>Specializations and masteries are assigned to specific survivors before departure.</p>
     </div>
     <div id="title">
-        <h1>Wanderers:</h1>
+        <h1>Nomads:</h1>
         <p> 4 survivors sit around a fire in the plain of faces, they either hunt or are hunted. </p>
     </div>
     <div id="details">
