Scout grid and colored survivors

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,13 @@
             </div>
         </form>
         <h3>Rules:</h3>
-        <p>If anything during camp causes a survivor to not be able to depart (or die), perform the random action again.
-        </p>
-        <p>All gear in the gear section is not assigned until camp phase ends (this includes cursed gear).</p>
-        <p>Specializations and masteries are assigned to specific survivors before departure.</p>
+        <li>If anything during camp causes a survivor to not be able to depart (or die), perform the random action
+            again.
+        </li>
+        <li>All gear in "They Carry" is not assigned until camp phase ends (this includes cursed gear).</li>
+        <li>Specializations and masteries are assigned to specific survivors before departure.</li>
+        <li>Custom Scout gear grids <a href="./data/Scout.png"">here</a> original idea for 6 player rules from <a href="
+                https://www.patreon.com/posts/fens-2025-5-and-138012334">Fen</a> who you can support on Patreon.</li>
     </div>
     <div id="title">
         <h1>Nomads:</h1>
