Some improvements for different screens

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,6 @@
 
 <body>
     <div id="options">
-        <h3>Content:</h3>
-        <form id="optionsForm">
-            <div id="expansionList"></div>
-            <div>
-                <button type="submit">Load</button>
-            </div>
-        </form>
     </div>
     <div id="title">
         <h1>Nomads:</h1>
@@ -192,8 +185,16 @@
         <li>Follow standard rules for showdowns, including a hunt phase for quarries.</li>
         <li>Character milestones happen normally, ignore settlement abilities from bold, and insight.</li>
     </div>
+    <div id="expansions">
+        <h3>Content:</h3>
+        <form id="optionsForm">
+            <div id="expansionList" class="flex"></div>
+            <div>
+                <button type="submit">Load</button>
+            </div>
+        </form>
+    </div>
     <footer>
-        <button id="optionsButton">Options</button>
         Expansion by <a href="https://github.com/bombasticSlacks/">bombasticSlacks</a> |
         Built from: <a href="https://github.com/bombasticSlacks/KDMR">https://github.com/bombasticSlacks/KDMR</a> |
         6 player rules adapted from <a href="https://www.patreon.com/posts/fens-2025-5-and-138012334">Fen</a> |
