Theming and mobile upgrades

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     <div id="options">
     </div>
     <div id="title">
-        <h1>Nomads:</h1>
-        <p> Survivors sit around a fire in the plain of faces, they either hunt or are hunted. </p>
+        <h1>🜂 Nomads</h1>
+        <p> Survivors sit around a fire in the plain of faces, the camp site is well organized and reeks of vile
+            burning rubber. They either hunt or are hunted. </p>
     </div>
     <div id="details">
         <form id="generator">
@@ -75,7 +76,7 @@
             <div id="monsterDetails"></div>
         </div>
     </div>
-    <h1>You Each May Endeavor At Camp Before Departing: ✪✪✪✪</h1>
+    <h1>🜂 You Each May Endeavor At Camp Before Departing: ✪✪✪✪</h1>
     <div id="endeavors">
         <div class="info">
             <p class="flavour">A shrine rests slightly away from the fire</p>
@@ -172,8 +173,9 @@
             </ul>
         </div>
     </div>
+    <h1>🜂 Rules</h1>
     <div id="rules">
-        <h3>Rules:</h3>
+
         <li>If anything during camp causes a survivor to not be able to depart (or die), perform the random action
             again.
         </li>
@@ -184,13 +186,49 @@
                 https://www.patreon.com/posts/fens-2025-5-and-138012334">Fen</a> who you can support on Patreon.</li>
         <li>Follow standard rules for showdowns, including a hunt phase for quarries.</li>
         <li>Character milestones happen normally, ignore settlement abilities from bold, and insight.</li>
+        <li>You cannot gain Innovations.</li>
+        <li>You can gain Resources, they follow standard rules during hunt and showdown phase.</li>
+        <li>Aftermath for all Showdowns is replaced with
+            <ul>
+                <li>"Victory: If any survivors have died 🕮 <b>Hold Their Memory</b>, then, 🕮 <b>Split The Bounty</b>."
+                </li>
+                <li>"Defeat: 🕮 <b>Avenger In The Dark</b>."</li>
+            </ul>
+        </li>
+        <li>Fighting Art, Disorder, and Terrain decks are recommended to include core game + current hunt target cards.
+        </li>
     </div>
+    <h1>🜂 Story Events</h1>
+    <div class="flex">
+
+        <div class="event">
+            <h3>🕮 Hold Their Memory</h3>
+            <p class="flavour">The survivors quickly gather the dead. With care they take mementos from their fallen
+                allies
+                as well as any fire starters they carried.
+                Markers are driven into the ground and still lit lanterns are left to go out on their own.</p>
+        </div>
+        <div class="event">
+            <h3>🕮 Split The Bounty</h3>
+            <p class="flavour">The remaining survivors stand over their kill. They gather the pieces and begin the
+                process of harvest and allocation. Once the survivors are satisfied they begin to separate; some quickly
+                vanish into the dark worried to be followed, others discuss their heading deciding to move together. In
+                the darkness of the plain of faces the dim lights of similar fires can be seen.</p>
+        </div>
+        <div class="event">
+            <h3>🕮 Avenger In The Dark</h3>
+            <p class="flavour">In the darkness 4 nomads lay dead, barely illuminated by lantern light, a monster
+                lingers picking at them until something silent moves to attack. In the darkness of the plain of
+                faces many lay dead reeking of rubber and fire.</p>
+        </div>
+    </div>
+    <h1>🜂 Options</h1>
     <div id="expansions">
         <h3>Content:</h3>
         <form id="optionsForm">
             <div id="expansionList" class="flex"></div>
             <div>
-                <button type="submit">Load</button>
+                <button type="submit">Re-Load</button>
             </div>
         </form>
     </div>
