More Theming Updates, more rules

--- a/public/index.html
+++ b/public/index.html
@@ -148,8 +148,8 @@
             </ul>
         </div>
         <div class="info">
-            <p class="flavour">A cracked face oozes black saccharine ichor</p>
-            <h3>You Imbibe ✪</h3>
+            <p class="flavour">Chromatic smoke drifts from your fire</p>
+            <h3>You Breath It In ✪</h3>
             <p>Roll 1d10</p>
             <ul>
                 <li>1: Gain Possessed ability</li>
@@ -159,7 +159,8 @@
                 <li>5: Gain Leyline Walker ability</li>
                 <li>6: Gain Nightmare Spurs ability</li>
                 <li>7: Gain Iron Will ability</li>
-                <li>8: Gain "Your complete affinities and incomplete affinity halves count as all colours." ability</li>
+                <li>8: Gain Chromatic Eyes: "Your complete affinities and incomplete affinity halves count as all
+                    colours." ability</li>
                 <li>9-10: Choose your outcome</li>
             </ul>
             <br />
@@ -195,6 +196,14 @@
                 <li>"Defeat: 🕮 <b>Avenger In The Dark</b>."</li>
             </ul>
         </li>
+        <li>Custom abilities are:
+            <ul>
+                <li>Chromatic Eyes: "Your complete affinities and incomplete affinity halves count as all colours"</li>
+                <li>Dependent: "If someone dies during the hunt phase, you may replace them in the showdown with a new
+                    survivor with no abilities or attributes"</li>
+                <li>Handy: "Gain an additional ✪"</li>
+            </ul>
+        </li>
         <li>Fighting Art, Disorder, and Terrain decks are recommended to include core game + current hunt target cards.
         </li>
     </div>
@@ -219,7 +228,7 @@
             <h3>🕮 Avenger In The Dark</h3>
             <p class="flavour">In the darkness 4 nomads lay dead, barely illuminated by lantern light, a monster
                 lingers picking at them until something silent moves to attack. In the darkness of the plain of
-                faces many lay dead reeking of rubber and fire.</p>
+                faces many lay dead, reeking of rubber and fire.</p>
         </div>
     </div>
     <h1>🜂 Options</h1>
