Dynamic endeavor count

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             <div id="monsterDetails"></div>
         </div>
     </div>
-    <h1>🜂 You Each May Endeavor At Camp Before Departing: ✪✪✪✪</h1>
+    <h1 id="endeavorCount">🜂 You Each May Endeavor At Camp Before Departing:</h1>
     <div id="endeavors">
         <div class="info">
             <p class="flavour">A shrine rests slightly away from the fire</p>
