--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <script type="module" src="./webscript.js"></script>
 
 <head>
-    <title>Monster Randomizer</title>
+    <title>Nomads: A Digital Monster Expansion</title>
     <meta name="author" content="bombasticSlacks" />
     <meta name="description"
         content="Nomads, a digital expansion for Kingdom Death: Monster that randomizes a single fight with random survivors." />
