More rules updates

--- a/public/index.html
+++ b/public/index.html
@@ -180,14 +180,15 @@
         <li>If anything during camp causes a survivor to not be able to depart (or die), perform the random action
             again.
         </li>
-        <li>All gear in "They Carry" is not assigned until camp phase ends (this includes cursed gear).</li>
+        <li>An armour set in "They Carry" means 1 of each piece in the set, but the minimal amount of items (Gorment Armor doesnt include regeneration suit for example)</li>
+        <li>All gear in "They Carry" is not assigned until right before departure (this includes cursed gear).</li>
         <li>Specializations and masteries are assigned to specific survivors before departure.</li>
         <li>Custom Scout gear grids <a
                 href="./data/Scout.png"">here</a>, however the default grid may also be used. Original idea for 6 player rules from <a href="
                 https://www.patreon.com/posts/fens-2025-5-and-138012334">Fen</a> who you can support on Patreon.</li>
         <li>Follow standard rules for showdowns, including a hunt phase for quarries.</li>
         <li>Character milestones happen normally, ignore settlement abilities from bold, and insight.</li>
-        <li>You cannot gain Innovations.</li>
+        <li>You cannot gain Innovations or Principals and gain no benefits from them.</li>
         <li>You can gain Resources, they follow standard rules during hunt and showdown phase.</li>
         <li>Aftermath for all Showdowns is replaced with
             <ul>
