--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,8 @@
         Expansion by <a href="https://github.com/bombasticSlacks/">bombasticSlacks</a> |
         Built from: <a href="https://github.com/bombasticSlacks/KDMR">https://github.com/bombasticSlacks/KDMR</a> |
         6 player rules adapted from <a href="https://www.patreon.com/posts/fens-2025-5-and-138012334">Fen</a> |
-        Report bugs <a href="https://github.com/bombasticSlacks/KDMR/issues">here</a>
+        Report bugs <a href="https://github.com/bombasticSlacks/KDMR/issues">here</a> |
+        <a href="https://kingdomdeath.com/">Buy Monster</a>
 
     </footer>
 </body>
