--- a/public/index.html
+++ b/public/index.html
@@ -241,6 +241,44 @@
                 <button type="submit">Re-Load</button>
             </div>
         </form>
+        <h3>Difficulty</h3>
+        <label>Chance for items to be higher tier</label>
+        <select name="highMult" id="highMult">
+            <option value="0">0%</option>
+            <option value=".05" selected>5%</option>
+            <option value=".1">10%</option>
+            <option value=".25">25%</option>
+            <option value=".5">50%</option>
+            <option value="1">100%</option>
+        </select>
+        <label>Chance for items to be lower tier</label>
+        <select name="lowMult" id="lowMult">
+            <option value="0">0%</option>
+            <option value=".05">5%</option>
+            <option value=".1" selected>10%</option>
+            <option value=".25">25%</option>
+            <option value=".5">50%</option>
+            <option value="1">100%</option>
+        </select>
+        <label>Total amount of items</label>
+        <select name="itemMult" id="itemMult">
+            <option value=".5">50%</option>
+            <option value=".75">75%</option>
+            <option value=".9">90%</option>
+            <option value="1" selected>100%</option>
+            <option value="1.1">110%</option>
+            <option value="1.25">125%</option>
+            <option value="1.5">150%</option>
+        </select>
+        <label>Chance for special survivors</label>
+        <select name="specialMult" id="specialMult">
+            <option value="0">0%</option>
+            <option value=".05" selected>5%</option>
+            <option value=".1">10%</option>
+            <option value=".25">25%</option>
+            <option value=".5">50%</option>
+            <option value="1">100%</option>
+        </select>
     </div>
     <footer>
         Expansion by <a href="https://github.com/bombasticSlacks/">bombasticSlacks</a> |
