Sheets, Gamblers Chest, Progress On Scribe Integration

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
                     <button id="armourSelect">New Armour</button>
                     <p id="armourResult"></p>
                 </div>
-                <li>Sacrifice up to 3 non-armour, non-weapon gear pieces to obtain new ones</li>
+                <li>Up to 3 times you may sacrifice a gear card to select one of 3 new non-armour, non-weapon gear.</li>
                 <div class="flex inline">
                     <button id="accessorySelect">New Gear</button>
                     <p id="accessoryResult"></p>
@@ -180,7 +180,8 @@
         <li>If anything during camp causes a survivor to not be able to depart (or die), perform the random action
             again.
         </li>
-        <li>An armour set in "They Carry" means 1 of each piece in the set, but the minimal amount of items (Gorment Armor doesnt include regeneration suit for example)</li>
+        <li>An armour set in "They Carry" means 1 of each piece in the set, but the minimal amount of items (Gorment
+            Armor doesnt include regeneration suit for example)</li>
         <li>All gear in "They Carry" is not assigned until right before departure (this includes cursed gear).</li>
         <li>Specializations and masteries are assigned to specific survivors before departure.</li>
         <li>Custom Scout gear grids <a
@@ -190,6 +191,7 @@
         <li>Character milestones happen normally, ignore settlement abilities from bold, and insight.</li>
         <li>You cannot gain Innovations or Principals and gain no benefits from them.</li>
         <li>You can gain Resources, they follow standard rules during hunt and showdown phase.</li>
+        <li>Any resource without rules for consuming has "<b>Consume</b>: Archive this and gain 1 survival."</li>
         <li>Aftermath for all Showdowns is replaced with
             <ul>
                 <li>"Victory: If any survivors have died 🕮 <b>Hold Their Memory</b>, then, 🕮 <b>Split The Bounty</b>."
@@ -207,6 +209,7 @@
         </li>
         <li>Fighting Art, Disorder, and Terrain decks are recommended to include core game + current hunt target cards.
         </li>
+        <li>If you gain a unique item twice, you can reroll it at the crafter.</li>
     </div>
     <h1>🜂 Story Events</h1>
     <div class="flex">
@@ -279,6 +282,13 @@
             <option value=".5">50%</option>
             <option value="1">100%</option>
         </select>
+    </div>
+    <h1>🜂 Resources</h1>
+    <div id="resources">
+        <li><a href="./data/Scout.png">Scout Grid</a></li>
+        <li><a href="./data/Scout-For-Print.png">Scout Grid for print</a></li>
+        <li><a href="./data/SurvivorSheet.svg">Survivor Sheet</a> (I laminate for re-use)</li>
+        <li><a href="./data/SurvivorSheets.pdf">Survivor Sheets For Print</a> (I laminate for re-use)</li>
     </div>
     <footer>
         Expansion by <a href="https://github.com/bombasticSlacks/">bombasticSlacks</a> |
