--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,8 @@
             <ul>
                 <li>Chromatic Eyes: "Your complete affinities and incomplete affinity halves count as all colours"</li>
                 <li>Dependent: "If someone dies during the hunt phase, you may replace them in the showdown with a new
-                    survivor with no abilities or attributes"</li>
+                    survivor with no abilities or attributes. Treat them as though they were departing and then
+                    arriving."</li>
                 <li>Handy: "Gain an additional ✪"</li>
             </ul>
         </li>
